# BigMath

./: .gitignore  CMakeLists.txt  README.md
Test/: CMakeLists.txt
Test/Source/: BigMathTest.cpp  BigMathTest.h  Main.cpp
